test[#65]: 가게 등록시 이미지 생성 부분 추가
- 테스트 환경에서의 빈을 다르게 등록하여 실제 S3와 통신없이 url만 반환