@@ -1,11 +1,13 @@
 package com.handong.rebon.acceptance.admin;
 
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import com.handong.rebon.category.domain.Category;
+import com.handong.rebon.common.factory.ImageFactory;
 import com.handong.rebon.shop.application.ShopAdapterService;
 import com.handong.rebon.shop.application.ShopService;
 import com.handong.rebon.shop.application.adapter.ShopServiceAdapter;
@@ -20,6 +22,7 @@ import com.handong.rebon.tag.domain.Tag;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.web.multipart.MultipartFile;
 
 @Component
 @ActiveProfiles("test")
@@ -49,7 +52,7 @@ public class AdminShopRegister {
         return shopRepository.save(shop);
     }
 
-    public Shop CafeRegisterWithMenu(String name, Category parent, List<Category> subs, List<Tag> tags, ShopImages shopImages) {
+    public Shop CafeRegisterWithMenu(String name, Category parent, List<Category> subs, List<Tag> tags) throws IOException {
         List<Long> subIds = subs.stream()
                                 .map(Category::getId)
                                 .collect(Collectors.toList());
@@ -68,12 +71,20 @@ public class AdminShopRegister {
                                                                         .address("경상북도 포항시 OO")
                                                                         .latitude("41.40338")
                                                                         .longitude("2.17403")
-                                                                        //  .images() TODO 이미지 기능
+                                                                        .images(basicImage())
                                                                         .menus(basicCafeMenu())
                                                                         .build();
 
         Long id = shopService.create(shopCreateRequestDto);
-        return shopRepository.findById(id).get();
+        return shopRepository.getById(id);
+    }
+
+    private List<MultipartFile> basicImage() {
+        return List.of(
+                ImageFactory.createFakeImage("정면 사진"),
+                ImageFactory.createFakeImage("내부 사진1"),
+                ImageFactory.createFakeImage("내부 사진2")
+        );
     }
 
     private List<MenuGroupRequestDto> basicCafeMenu() {
@@ -88,7 +99,7 @@ public class AdminShopRegister {
                 new MenuRequestDto("초코 케이크", 7000)
         );
 
-        return Arrays.asList(
+        return List.of(
                 new MenuGroupRequestDto("커피류", coffee),
                 new MenuGroupRequestDto("디저트류", dessert)
         );
